--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,15 @@
 /*  your css code here. If applicable */
+#container{
+	margin: 20px;
+}
+#first{
+	color:red;
+	font-size:20px;
+}
+#last{
+	color:red;
+	font-size:20px;
+}
+#first:hover{
+	color:blue;
+}
