--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,11 @@
 	margin: 20px;
 }
 #first{
-	color:red;
+	color:rgb(255, 0, 0);
 	font-size:20px;
 }
 #last{
-	color:red;
+	color:rgb(255, 0, 0);
 	font-size:20px;
 }
 #first:hover{
